--- a/i18n/fr.yml
+++ b/i18n/fr.yml
@@ -1,6 +1,6 @@
 services_persons:
   all: Toutes les personnes du service
-  discover: Découvrir la personne du service
+  discover: Découvrir la personne responsable du service
   latest: Dernière personnes du service
   more: Découvrir plus de personnes du service
   title:
